--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -43,7 +43,7 @@
     errors: settings.getErrors('footer')
 }) }}
 			{{ forms.textField({
-    label: "Footer template" | t,
+    label: "Margin top" | t,
     id: 'margin_top',
     name: 'margin_top',
     instructions: "The top margin defaults to 30."|t,
@@ -51,7 +51,7 @@
     errors: settings.getErrors('margin_top')
 }) }}
 			{{ forms.textField({
-    label: "Footer template" | t,
+    label: "Margin bottom" | t,
     id: 'margin_bottom',
     name: 'margin_bottom',
     instructions: "The bottom margin defaults to 30."|t,
@@ -60,7 +60,7 @@
 }) }}
 
 			{{ forms.textField({
-    label: "Footer template" | t,
+    label: "Margin left" | t,
     id: 'margin_left',
     name: 'margin_left',
     instructions: "The left margin defaults to 15."|t,
@@ -68,7 +68,7 @@
     errors: settings.getErrors('margin_left')
 }) }}
 			{{ forms.textField({
-    label: "Footer template" | t,
+    label: "Margin right" | t,
     id: 'margin_right',
     name: 'margin_right',
     instructions: "The right margin defaults to 15."|t,
@@ -91,6 +91,14 @@
     instructions: "This replaces the default title of the generated PDF document."|t,
     value: settings. title|default(null),
     errors: settings.getErrors('title')
+}) }}
+			{{ forms.textField({
+    label: "Encoding" | t,
+    id: 'encoding',
+    name: 'encoding',
+    instructions: "This can be used to set encoding of input of your PDF."|t,
+    value: settings. encoding|default(null),
+    errors: settings.getErrors('encoding')
 }) }}
 
 			{{ forms.textField({
@@ -135,14 +143,6 @@
     value: settings. tempDir|default(null),
     errors: settings.getErrors('tempDir')
 }) }}
-			{{ forms.textField({
-    label: "Temporary directory" | t,
-    id: 'tempDir',
-    name: 'tempDir',
-    instructions: "This sets the path to the temporary directory used for generating PDFs. We have tested this with the main /tmp directory on the server with success. This could potentially improve performance when generating multiple PDFs."|t,
-    value: settings. tempDir|default(null),
-    errors: settings.getErrors('tempDir')
-}) }}
 			{{ forms.lightswitchField({
     label: "Landscape" | t,
     id: 'landscape',
@@ -157,7 +157,6 @@
     name: 'portrait',
     instructions: "If this is set, the PDF will be generated in portrait mode." | t,
     on: settings.portrait,
-
 }) }}
 			{{ forms.textField({
     label: "Format" | t,
@@ -216,7 +215,7 @@
 			{{ forms.lightswitchField({
     label: "Asset delete" | t,
     id: 'assetDelete',
-    name: 'assetDelete'|default(null),
+    name: 'assetDelete',
     on: settings.assetDelete,
     instructions: "If this set it enables the deletion of the internally generated file in the `@root` path. Please note that this operation is irreversible and may consume more resources. This is because the Asset is updated and the PDF is generated on every load when using the `pdfAsset` method." | t,
 }) }}
@@ -264,6 +263,7 @@
 			<p>
 				Both `assetThumb` and `dumbThumb` support the following optional customizations:
 			</p>
+
 			{{ forms.textField({
     label: "Thumb type" | t,
     id: 'thumbType',
@@ -326,26 +326,37 @@
 				Install optional packages
 			</h2>
 			<p>
-				In this section you can install optional packages to your plugin.
+				The optional packages are additional features that you can enable or disable in the plugin settings. They provide more functionality and customization for the PDF generation process. The optional packages are:
 			</p>
 			<p>
-				Install package:
 				<a hrf="https://github.com/chillerlan/php-qrcode">chillerlan/php-qrcode</a>
 				for QR Code generation</p>
 			<a href="{{ actionUrl('documenthelpers/install/install-package', { package: 'chillerlan/php-qrcode' , version: "4.3"}) }}" class="btn btngroup-btn-first">Install package for QR Code generation</a>
+
 			{{forms.textField({
     label: "QR Data to generate" | t,
     id: 'qrdata',
-    name: 'qrdata',
+    name: 'qrdata'|default(null),
     instructions: "This option allows you to generate a QR Code image from any data you provide. The image will be available on the Twig template with `{{qrimg}}` variable. Required optional package from plugin settings."|t,
     value: settings.qrdata|default(null),
     errors: settings.getErrors('qrdata')
+}) }}
+			<p>
+				<a href="https://github.com/ezyang/htmlpurifier">ezyang/htmlpurifier</a>
+				for HTML (URL) purifier for problems with scraped websites on some URLs.</p>
+			<a href="{{ actionUrl('documenthelpers/install/install-package', { package: 'ezyang/htmlpurifier' , version: "4.17"}) }}" class="btn btngroup-btn-first">Install package for scraped URL HTML purify</a>
+			{{ forms.lightswitchField({
+    label: "Provided URL (HTML) Purfiy" | t,
+    id: 'URLPurify',
+    name: 'URLPurify',
+    on: settings.URLPurify,
+    instructions: "If this is set it enables URL Purification by external library." | t,
 }) }}
 			{{forms.textField({
     label: "Custom PHP Path" | t,
     id: 'phpPath',
     name: 'phpPath',
-    instructions: "This option allows you to set custom php binary path or name like '\usr\bin\php' or 'php', or 'php8.0' which can resolve problem with not installable packages during to problems php path or misconfiguration."|t,
+    instructions: "This option allows you to set custom php binary path or name like '\/usr\/bin\/php' or 'php', or 'php8.0' which can resolve problem with not installable packages during to problems php path or misconfiguration."|t,
     value: settings.phpPath|default(null),
     errors: settings.getErrors('phpPath')
 }) }}
